--- a/package.json
+++ b/package.json
@@ -2,10 +2,7 @@
   "name": "yandex-metrika",
   "version": "0.0.1",
   "description": "Yandex Metrika service for angularjs",
-  "main": "gulpfile.js",
-  "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
-  },
+  "main": "./dist/metrika.js",
   "repository": {
     "type": "git",
     "url": "git+https://github.com/FriOne/angularjs-yandex-metrika.git"
@@ -23,7 +20,7 @@
   },
   "homepage": "https://github.com/FriOne/angularjs-yandex-metrika#readme",
   "devDependencies": {
-    "browserify": "^13.0.0",
-    "gulp": "^3.9.0"
+    "gulp": "^3.9.0",
+    "gulp-uglify": "^1.5.2"
   }
 }
