--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
-  "name": "yandex-metrika",
-  "version": "0.0.1",
+  "name": "angularjs-yandex-metrika",
+  "version": "0.1.0",
   "description": "Yandex Metrika service for angularjs",
   "main": "./dist/metrika.js",
   "repository": {
