Change license type to MIT

--- a/bower.json
+++ b/bower.json
@@ -5,7 +5,7 @@
   "authors": [
     "Lyubimov Roman"
   ],
-  "license": "ISC",
+  "license": "MIT",
   "keywords": [
     "yandex",
     "metrika",
