--- a/package.json
+++ b/package.json
@@ -1,11 +1,14 @@
 {
   "name": "angularjs-yandex-metrika",
-  "version": "1.4.0",
+  "version": "1.4.1",
   "description": "Yandex Metrika service for angularjs",
   "main": "./dist/metrika.min.js",
   "repository": {
     "type": "git",
     "url": "git+https://github.com/FriOne/angularjs-yandex-metrika.git"
+  },
+  "scripts": {
+    "build": "webpack"
   },
   "keywords": [
     "yandex",
